toString(); copy list