@@ -3,6 +3,7 @@ package ch.brodbeck.solver;
 import org.junit.Test;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class SolverTest {
@@ -15,12 +16,27 @@ public class SolverTest {
                 new Box(3, 3, 3),
         };
         SolverRecursive solverRecursive = new SolverRecursive();
-        List<Box> leftBoxes = new ArrayList<Box>(List.of(boxes));
+        List<Box> leftBoxes = new ArrayList<Box>(Arrays.asList(boxes));
         List<PositionedBox> solution = solverRecursive.solveBox(boxContainer, leftBoxes);
 
         for (int i = 0; i < boxes.length; i++) {
-            System.out.println(solution.get(i).getPlainBox().toString());
+            System.out.println(solution.get(i).toString());
         }
-        System.out.println("the solution is " + solution);
+    }
+    @Test
+    public void checkSolverRotation() {
+        BoxContainer boxContainer = new BoxContainer(new Box(3, 5, 3));
+        Box[] boxes = new Box[]{
+                new Box(1, 3, 5),
+                new Box(2, 3, 4),
+                new Box(1, 2, 3),
+        };
+        SolverRecursive solverRecursive = new SolverRecursive();
+        List<Box> leftBoxes = new ArrayList<Box>(Arrays.asList(boxes));
+        List<PositionedBox> solution = solverRecursive.solveBox(boxContainer, leftBoxes);
+
+        for (int i = 0; i < boxes.length; i++) {
+            System.out.println(solution.get(i).toString());
+        }
     }
 }
